# data-analysis-with-python-libraries

./: .gitignore
pydata-book/: .gitignore  ch02.ipynb  ch03.ipynb  ch03_DataStructures_Functions_Files.ipynb  ch04.ipynb  ch05.ipynb  ch06.ipynb  ch09_Plotting_and_Visualization.ipynb  pyproject.toml
