[project]
name = "data-analysis-with-python-libraries"
version = "0.1.0"
description = "data_analysis_with_python_libraries"
authors = [
    {name = "nyamin9",email = "pkdt15343@naver.com"}
]
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "patsy (>=1.0.1,<2.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.4,<8.0.0)",
    "html5lib (>=1.1,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
